# gen-ai-end-to-end

./: main.py
M5_RAG_Hands_On_Project/: .env.example  app.py  htmlTemplates.py  readme.md  requirements.txt
M5_hello_world_program/data/: doc.txt
hello_world_program/: README.md  pyproject.toml
weather_mcp_tool_handson/: README.md
